[tool.poetry]
name = "s3-cache"
version = "0.1.0"
description = ""
authors = ["jalho <j.pd.alho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.64"
flask-caching = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
